<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearPacienteActivity"
        android:orientation="vertical"
        android:padding="30dp" android:id="@+id/crePac_ly">

    <TextView
            android:text="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/crePac_txt_nombre"
            android:padding="10dp"
            android:paddingLeft="0dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/crePac_txtin_nombre"/>
    <TextView
            android:text="@string/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/crePac_txt_apellido"
            android:padding="10dp"
            android:paddingLeft="0dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/crePac_txtin_apellido"/>
    <TextView
            android:text="@string/fechaNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/crePac_txt_fechNac"
            android:padding="10dp"
            android:paddingLeft="0dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/crePac_txtin_fechNac"/>
    <TextView
            android:text="@string/alergias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/crePac_txt_alergias"
            android:padding="10dp"
            android:paddingLeft="0dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/crePac_txtin_alergias"/>
    <Button
            android:text="@string/ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/crePac_btn"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
    />
</android.widget.LinearLayout>