<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical" android:id="@+id/paciente_rvitem_ly"
                             android:padding="10dp" android:background="@color/gray_light" android:gravity="right"
                             android:layout_marginBottom="20dp">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_ly_nom"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">
        <TextView
                android:text="@string/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_txt_nom"
                android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_desc_nom"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_ly_ape"
            android:paddingBottom="10dp">
        <TextView
                android:text="@string/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_txt_ape"
                android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_desc_ape"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_ly_fechNac"
            android:paddingBottom="10dp">
        <TextView
                android:text="@string/fechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_txt_fechNac"
                android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_desc_fechNac"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_ly_aler"
            android:paddingBottom="10dp">
        <TextView
                android:text="@string/alergias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_txt_aler"
                android:layout_weight="1"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_desc_aler"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="84dp"
            android:layout_height="wrap_content" android:id="@+id/paciente_rvitem_ly_buttons"
            android:paddingBottom="10dp">
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/icon_update"
                android:id="@+id/paciente_rvitem_btn_update"
                android:layout_weight="1" android:layout_gravity="right" android:background="@color/gray_light"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/icon_delete"
                android:id="@+id/paciente_rvitem_btn_delete" android:layout_weight="1" android:layout_gravity="right"
                android:background="@color/gray_light"/>
    </LinearLayout>
</android.widget.LinearLayout>